Changed scale on img hover animation to prevent overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,14 +84,7 @@ h3 {
     background-color: #5983ff;
     border-color: #5983ff;
 }
-/* General */
-.container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
-    width: 100%;
-    padding-right: 0px;
-    padding-left: 0px;
-    margin-right: 0px;
-    margin-left: 0px;
-}
+
 
 /* Hero images styling */
 .hero-images {
@@ -153,7 +146,7 @@ img {
     margin-top: 1rem;
 }
 .myHover:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     transition-timing-function: ease-in-out;
     transition-duration: 1.2s;
 }
